@@ -3,6 +3,7 @@
 - Add Up Next support
 - Add Next Aired 7.0.1 support
 - Corner icon choices for fixed width horizontal menus
+- Seekbar dot color 
 
 0.9.45
 - Updates to Sets info
